@@ -1,14 +1,14 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 import java.util.concurrent.atomic.AtomicBoolean
 
 plugins {
     id 'com.google.osdetector' version '1.6.2' apply false
+    id 'cz.alenkacz.gradle.scalafmt' version '1.16.2' apply false
     // If you want to change `org.jetbrains.kotlin.jvm` version,
     // you also need to change `org.jetbrains.kotlin:kotlin-allopen` version in `dependencies.yml`.
-    id 'org.jetbrains.kotlin.jvm' version '1.4.20' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.5.21' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '10.1.0' apply false
 
-    id 'net.ltgt.errorprone' version '1.2.1' apply false
+    id 'net.ltgt.errorprone' version '2.0.2' apply false
 }
 
 allprojects {
@@ -23,11 +23,6 @@ ext {
 }
 
 apply from: "${rootDir}/gradle/scripts/build-flags.gradle"
-
-def javaTestHome = System.env.JAVA_TEST_HOME
-if (javaTestHome) {
-    logger.quiet("Overriding JVM for tests with ${javaTestHome}")
-}
 
 // Fail the build if the console contains 'LEAK:'.
 def hasLeak = new AtomicBoolean()
@@ -44,6 +39,9 @@ allprojects {
     // Add common JVM options such as max memory and leak detection.
     tasks.withType(JavaForkOptions) {
         maxHeapSize = '512m'
+        if (rootProject.ext.testJavaVersion >= 9) {
+            jvmArgs '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
+        }
 
         // Enable leak detection when '-Pleak' option is specified.
         if (rootProject.hasProperty('leak')) {
@@ -62,10 +60,7 @@ allprojects {
         if (project.hasFlags('coverage')) {
             systemProperty 'com.linecorp.armeria.testing.coverage', 'true'
         }
-        // Use a different JRE for testing if necessary.
-        if (javaTestHome) {
-            executable "${javaTestHome}/bin/java"
-        }
+
         // Parallelize if --parallel is on.
         if (gradle.startParameter.parallelProjectExecutionEnabled) {
             maxParallelForks = gradle.startParameter.maxWorkerCount
@@ -79,16 +74,6 @@ allprojects {
                     hasLeak.set(true)
                 }
             })
-        }
-    }
-}
-
-task checkJavaVersion {
-    doLast {
-        if (JavaVersion.current().majorVersion.toInteger() < 12) {
-            throw new GradleException("The Java version used (${JavaVersion.current()}) is too old to " +
-                    "build Armeria. Please use at least JDK 12. You can download a compatible JDK from " +
-                    "https://adoptopenjdk.net/")
         }
     }
 }
@@ -124,9 +109,12 @@ configure(projectsWithFlags('java')) {
 
         // Errorprone
         compileOnly 'com.google.errorprone:error_prone_annotations'
+        testImplementation 'com.google.errorprone:error_prone_annotations'
 
         // FastUtil
         implementation 'it.unimi.dsi:fastutil'
+        implementation 'it.unimi.dsi:fastutil-core'
+        implementation 'it.unimi.dsi:fastutil-extra'
 
         // Guava
         implementation 'com.google.guava:guava'
@@ -174,23 +162,41 @@ configure(projectsWithFlags('java')) {
         testImplementation 'org.hamcrest:hamcrest-library'
     }
 
-    // Target Java 8.
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += ['--release', '8']
-
-        dependsOn checkJavaVersion
+    tasks.withType(JavaCompile) { task ->
+        if (task.path.startsWith(':examples:')) {
+            // Target Java 11 for examples.
+            options.release.set(11)
+            // IntelliJ fails to compile example projects with IntelliJ compiler because of a wrong target
+            // bytecode version which is marked as Java 8 without the following options.
+            // See https://github.com/line/armeria/pull/3712
+            sourceCompatibility = '11'
+            targetCompatibility = '11'
+        } else {
+            // Target Java 8 for the rest of them.
+            options.release.set(8)
+        }
     }
 
-    tasks.withType(KotlinCompile) {
-        kotlinOptions {
-            jvmTarget = "1.8"
-            freeCompilerArgs = ["-Xjsr305=strict"]
-        }
+    // Configure the default DuplicatesStrategy for such as:
+    // - c.l.armeria.versions.properties
+    // - thrift/cassandra.json
+    // - and so on
+    tasks.sourcesJar.duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    tasks.withType(Copy) {
+        duplicatesStrategy = DuplicatesStrategy.INCLUDE
     }
 }
 
-// Configure the Javadoc tasks of all projects.
 allprojects {
+
+    tasks.all { task ->
+        // Disables all tasks in examples when we use a JDK version under 11.
+        if (rootProject.ext.testJavaVersion < 11 && task.path.startsWith(':examples:')) {
+            task.enabled = false
+        }
+    }
+
+    // Configure the Javadoc tasks of all projects.
     tasks.withType(Javadoc) {
         options {
             // Groups
@@ -207,9 +213,9 @@ allprojects {
     }
 }
 
-// Require to use JDK 14 when releasing.
+// Require to use JDK 16 when releasing.
 tasks.release.doFirst {
-    if (JavaVersion.current() != JavaVersion.VERSION_14) {
-        throw new IllegalStateException("You must release using JDK 14.");
+    if (JavaVersion.current() != JavaVersion.VERSION_16) {
+        throw new IllegalStateException("You must release using JDK 16.");
     }
 }
